some fixes, preparations and tries of making turnover-balance sheet
